Removed the old debug canvas from the HTML sources, since they are now generated programatically by the Typescript dedicated to the UI.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,9 +7,7 @@
 		<link rel="stylesheet" href="../css/gui.css"/>
 	</head>
 	<body>
-        <canvas id="main_drawing_canvas" width="800px" height="600px">
-            Canvas does not seem to be supported.
-        </canvas>
+		<!-- Content is programatically inserted here -->
     </body>
 
 	<script type="text/javascript" src="../js/require.js" data-main="../js/main"></script>
