Added a favicon (in an `img` directory).

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 		<title>RubEns</title>
 
 		<link rel="stylesheet" href="./css/gui.css"/>
+		<link rel="icon" href="./img/favicon.ico" />
 	</head>
 	<body>
 		<!-- Content is programatically inserted here -->
